@@ -68,9 +68,9 @@ API_EXPORT bool isSystemIndex(const QString& name, Dialect dialect);
 API_EXPORT QString removeComments(const QString& value);
 API_EXPORT QList<TokenList> splitQueries(const TokenList& tokenizedQueries, bool* complete = nullptr);
 API_EXPORT QStringList splitQueries(const QString& sql, Dialect dialect, bool keepEmptyQueries = true, bool removeComments = false, bool* complete = nullptr);
-API_EXPORT QStringList quickSplitQueries(const QString& sql, bool keepEmptyQueries = true);
+API_EXPORT QStringList quickSplitQueries(const QString& sql, bool keepEmptyQueries = true, bool removeComments = false);
 API_EXPORT QString getQueryWithPosition(const QStringList& queries, int position, int* startPos = nullptr);
-API_EXPORT QString getQueryWithPosition(const QString& queries, int position, Dialect dialect, int* startPos = nullptr);
+API_EXPORT QString getQueryWithPosition(const QString& queries, int position, int* startPos = nullptr);
 API_EXPORT QList<QueryWithParamNames> getQueriesWithParamNames(const QString& query, Dialect dialect);
 API_EXPORT QList<QueryWithParamCount> getQueriesWithParamCount(const QString& query, Dialect dialect);
 API_EXPORT QueryWithParamNames getQueryWithParamNames(const QString& query, Dialect dialect);
